[gd_scene load_steps=3 format=3 uid="uid://crg7yhueq8o6w"]

[ext_resource type="Script" path="res://Areas/Desa/Environment/Tempat_makan/rumah_makan_ui_slot.gd" id="1_tu4dc"]
[ext_resource type="Texture2D" uid="uid://dlapxgbjce2wo" path="res://asset/control/putih.png" id="1_u273t"]

[node name="rumah_makan_ui_slot" type="Panel"]
custom_minimum_size = Vector2(261, 72)
offset_right = 261.0
offset_bottom = 72.0
script = ExtResource("1_tu4dc")

[node name="slot" type="Sprite2D" parent="."]
modulate = Color(0.576471, 0.74902, 0.811765, 1)
position = Vector2(130.467, 36.125)
scale = Vector2(0.216114, 0.105515)
texture = ExtResource("1_u273t")

[node name="item_slot" type="Sprite2D" parent="."]
position = Vector2(35, 36)
scale = Vector2(0.0500793, 0.0875)
texture = ExtResource("1_u273t")

[node name="item_picture" type="Sprite2D" parent="."]
position = Vector2(35, 36)

[node name="item_name" type="Label" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 7.0
offset_right = 254.0
offset_bottom = 30.0

[node name="item_benefit" type="Label" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 38.0
offset_right = 129.0
offset_bottom = 61.0

[node name="item_price" type="Label" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 38.0
offset_right = 194.0
offset_bottom = 61.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 34.0
offset_right = 253.0
offset_bottom = 65.0
text = "beli"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
